--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Brock Burghardt</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline"><Project-Tagline/h2>
       {% for page in site.pages %}
         <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
       {% endfor %}
