--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Brock Burghardt</h1>
       <h2 class="project-tagline">Project-Tagline</h2>
       {% for page in site.pages %}
-        <a href= {{ page.filename }} class="dropbtn">{{ page.title }}</a>
+        <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
       {% endfor %}
 
     </section>
