--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="icon" href="_images/tambora56.jpg">
+    <link rel="icon" href="tambora56.ico">
   </head>
   <body>
     <section class="page-header">
