--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -14,9 +14,9 @@
     <section class="page-header">
       <h1 class="project-name">Brock Burghardt</h1>
       <h2 class="project-tagline"></h2>
-      <a href="index.md" class="btn">Home</a>
-      <a href="mystory.md" class="btn">My Story</a>
-      <a href="retro.md" class="btn">Why retrodryline?</a>
+      <a href="#index" class="btn">Home</a>
+      <a href="#mystory" class="btn">My Story</a>
+      <a href="#retro" class="btn">Why retrodryline?</a>
 
     </section>
 
