--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -14,10 +14,11 @@
     <section class="page-header">
       <h1 class="project-name">Brock Burghardt</h1>
       <h2 class="project-tagline"></h2>
-      <a href="index" class="btn">Home</a>
-      <a href="mystory" class="btn">My Story</a>
-      <a href="retro" class="btn">Why retrodryline?</a>
-
+      <div class="navbar">
+       <a href="index" class="btn">Home</a>
+       <a href="mystory" class="btn">My Story</a>
+       <a href="retro" class="btn">Why retrodryline?</a>
+      </div>  
     </section>
 
     <section class="main-content">
