--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -17,7 +17,15 @@
       <div class="navbar">
        <a href="index" class="btn">Home</a>
        <a href="mystory" class="btn">My Story</a>
-       <a href="retro" class="btn">Why retrodryline?</a>
+       <div class="dropdown">
+         <button class="dropbtn">Retro
+           <i class="fa fa-caret-down"></i>
+         <\button> 
+         <div class="dropdown-content">
+           <a href="https://weather.cod.edu/forecast/">COD Models</a>
+           <a href="https://home.pivotalweather.com/"> Pivotal Weather</a>
+         </div>
+       </div>    
       </div>  
     </section>
 
