--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -20,10 +20,10 @@
        <div class="dropdown">
          <button class="dropbtn">Retro
            <i class="fa fa-caret-down"></i>
-         <\button> 
+         </button> 
          <div class="dropdown-content">
            <a href="https://weather.cod.edu/forecast/">COD Models</a>
-           <a href="https://home.pivotalweather.com/"> Pivotal Weather</a>
+           <a href="https://home.pivotalweather.com/">Pivotal Weather</a>
          </div>
        </div>    
       </div>  
