--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -16,7 +16,7 @@
       <h2 class="project-tagline"></h2>
       <div class="navbar">
        <a href="index" class="btn">Home</a>
-       <a href="mystory" class="btn">My Story</a>
+       <a href="mystory" class="dropbtn">My Story</a>
        <div class="dropdown">
          <button class="dropbtn">Retro
            <i class="fa fa-caret-down"></i>
