--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -16,9 +16,10 @@
       <h2 class="project-tagline"></h2>
       <div class="navbar">
        <a href="index" class="btn">Home</a>
-       <a href="mystory" class="dropbtn">My Story</a>
+       <a href="mystory" class="btn">My Story</a>
+       <a href="retro" class="btn"Why Retrodryline?</a>
        <div class="dropdown">
-         <button class="dropbtn">Retro
+         <button class="dropbtn">Why Retrodryline?
            <i class="fa fa-caret-down"></i>
          </button> 
          <div class="dropdown-content">
