--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -73,7 +73,7 @@
       .dropdown:hover .dropdown-content {
         display: block;
       }
-    <style>  
+    </style>  
   </head>
   <body>
     <section class="page-header">
