--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -87,8 +87,8 @@
            <i class="fa fa-caret-down"></i>
          </button> 
          <div class="dropdown-content">
-           <a href="https://weather.cod.edu/forecast/">COD Models</a>
-           <a href="https://home.pivotalweather.com/">Pivotal Weather</a>
+           <a href="https://weather.cod.edu/forecast/" target="_blank" rel="noopener noreferrer">COD Models</a>
+           <a href="https://home.pivotalweather.com/" target="_blank" rel="noopener noreferrer">Pivotal Weather</a>
          </div>
        </div>    
       </div>  
