--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -45,7 +45,7 @@
       }
 
       .navbar a:hover, .dropdown:hover .dropbtn {
-        background-color: red;
+        background-color: blue;
       }
 
       .dropdown-content {
@@ -79,7 +79,7 @@
     <section class="page-header">
       <h1 class="project-name">Brock Burghardt</h1>
       <h2 class="project-tagline"></h2>
-      <div class="navbar">
+      <!-- <div class="navbar"> -->
        <a href="index" class="btn">Home</a>
        <a href="mystory" class="btn">My Story</a>
        <div class="dropdown">
@@ -91,7 +91,7 @@
            <a href="https://home.pivotalweather.com/" target="_blank" rel="noopener noreferrer">Pivotal Weather</a>
          </div>
        </div>    
-      </div>  
+      <!-- </div> -->  
     </section>
 
     <section class="main-content">
