--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -82,6 +82,7 @@
       <!-- <div class="navbar"> -->
        <a href="index" class="btn">Home</a>
        <a href="mystory" class="btn">My Story</a>
+       <a href="mystory" class="dropbtn">My Story two</a>
        <div class="dropdown">
          <button class="dropbtn">Why Retrodryline?
            <i class="fa fa-caret-down"></i>
