--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -80,18 +80,16 @@
       <h1 class="project-name">Brock Burghardt</h1>
       <h2 class="project-tagline"></h2>
       <!-- <div class="navbar"> -->
+      <div class="dropdown">
        <a href="index" class="btn">Home</a>
        <a href="mystory" class="btn">My Story</a>
-       <a href="mystory" class="dropbtn">My Story two</a>
-       <div class="dropdown">
-         <button class="dropbtn">Why Retrodryline?
-           <i class="fa fa-caret-down"></i>
-         </button> 
-         <div class="dropdown-content">
-           <a href="https://weather.cod.edu/forecast/" target="_blank" rel="noopener noreferrer">COD Models</a>
-           <a href="https://home.pivotalweather.com/" target="_blank" rel="noopener noreferrer">Pivotal Weather</a>
-         </div>
-       </div>    
+       <a button class="dropbtn">Dropdown/button>
+       <div class="dropdown-content">
+         <a href="https://weather.cod.edu/forecast/" target="_blank" rel="noopener noreferrer">COD Models</a>
+         <a href="https://home.pivotalweather.com/" target="_blank" rel="noopener noreferrer">Pivotal Weather</a>
+       </div>
+      </div> 
+   
       <!-- </div> -->  
     </section>
 
