--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -83,7 +83,7 @@
       <div class="dropdown">
        <a href="index" class="btn">Home</a>
        <a href="mystory" class="btn">My Story</a>
-       <a button class="dropbtn">Dropdown/button>
+       <button class="dropbtn">Dropdown</button>
        <div class="dropdown-content">
          <a href="https://weather.cod.edu/forecast/" target="_blank" rel="noopener noreferrer">COD Models</a>
          <a href="https://home.pivotalweather.com/" target="_blank" rel="noopener noreferrer">Pivotal Weather</a>
