--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -79,18 +79,13 @@
     <section class="page-header">
       <h1 class="project-name">Brock Burghardt</h1>
       <h2 class="project-tagline"></h2>
-      <!-- <div class="navbar"> -->
-      <div class="dropdown">
        <a href="index" class="btn">Home</a>
        <a href="mystory" class="btn">My Story</a>
-       <button class="dropbtn">Dropdown</button>
-       <div class="dropdown-content">
-         <a href="https://weather.cod.edu/forecast/" target="_blank" rel="noopener noreferrer">COD Models</a>
-         <a href="https://home.pivotalweather.com/" target="_blank" rel="noopener noreferrer">Pivotal Weather</a>
-       </div>
-      </div> 
-   
-      <!-- </div> -->  
+       <a href="mystory" class="btn">Button 3</a>
+       <a href="mystory" class="btn">Button 4</a>
+       <a href="mystory" class="btn">Button 5</a>
+       <a href="mystory" class="btn">Button 6</a>
+
     </section>
 
     <section class="main-content">
