Adding My Github Button Link

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -84,6 +84,7 @@
        <a href="mystory" class="btn">Button 3</a>
        <a href="mystory" class="btn">Button 4</a>
        <a href="mystory" class="btn">Button 5</a>
+       <a href="https://github.com/retrodryline" class="btn" target="_blank" rel="noopener noreferrer">My GitHub</a>
        <a href="mystory" class="btn">Button 6</a>
 
     </section>
