--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="icon" href="BB.ico">
+    <link rel="icon" href="BB_Plain.ico">
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
