--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -81,7 +81,7 @@
       <h2 class="project-tagline"></h2>
        <a href="index" class="btn">Home</a>
        <a href="mystory" class="btn">My Story</a>
-       <a href="mystory" class="btn">Button 3</a>
+       <a href="retrodryline" class="btn">Retrodryline?</a>
        <a href="https://github.com/retrodryline" class="btn" target="_blank" rel="noopener noreferrer">My GitHub</a>
     </section>
 
