--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -79,7 +79,7 @@
     <section class="page-header">
       <h1 class="project-name">Brock Burghardt</h1>
       <h2 class="project-tagline"></h2>
-       <a href="index" class="btn">Home</a>
+       <a href="home" class="btn">Home</a>
        <a href="mystory" class="btn">My Story</a>
        <a href="retrodryline" class="btn">Retrodryline?</a>
        <a href="https://github.com/retrodryline" class="btn" target="_blank" rel="noopener noreferrer">My GitHub</a>
