--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -82,6 +82,7 @@
        <a href="index" class="btn">Home</a>
        <a href="mystory" class="btn">My Story</a>
        <a href="retrodryline" class="btn">Retrodryline?</a>
+       <a href="SWE_Classification_tohtml.html" class="btn">SWE Classification</a>
        <a href="https://github.com/retrodryline" class="btn" target="_blank" rel="noopener noreferrer">My GitHub</a>
     </section>
 
