--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -79,8 +79,8 @@
     <section class="page-header">
       <h1 class="project-name">Brock Burghardt</h1>
       <h2 class="project-tagline"></h2>
-       <a href="home" class="btn">Home</a>
-       <a href="mystory" class="btn">My Story</a>
+       <a href="index" class="btn">Home</a>
+       <a href="mywork" class="btn">My Work</a>
        <a href="retrodryline" class="btn">Retrodryline?</a>
        <a href="SWE_Classification_tohtml.html" class="btn">SWE Classification</a>
        <a href="https://github.com/retrodryline" class="btn" target="_blank" rel="noopener noreferrer">My GitHub</a>
