--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -84,7 +84,7 @@
        <a href="retrodryline" class="btn">Retrodryline?</a>
        <a href="SWE_Classification_tohtml.html" class="btn">SWE Classification</a>
        <a href="https://github.com/retrodryline" class="btn" target="_blank" rel="noopener noreferrer">My GitHub</a>
-       <a href="weatherlinkes" class="btn">Weather Links</a>
+       <a href="weatherlinks" class="btn">Weather Links</a>
     </section>
 
     <section class="main-content">
