Project Tagline added

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -78,7 +78,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Brock Burghardt</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">Please mind some messiness and lack of content as I bolster this site from markdown to HTML</h2>
        <a href="index" class="btn">Home</a>
        <a href="mywork" class="btn">My Work</a>
        <a href="retrodryline" class="btn">Retrodryline?</a>
